--- a/Andrea/index.html
+++ b/Andrea/index.html
@@ -58,7 +58,7 @@
   <div class="footer-container">
 
     <!-- Logo -->
-    <div class="footer-logo">
+    <div>
       <img src="assets/img/logoandrea.png" alt="AndreCicla Logo" class="logofooter">
 
     </div>
