section de andrea inicio

--- a/Andrea/index.html
+++ b/Andrea/index.html
@@ -61,10 +61,7 @@
     </div>
     <div class="acerca-de__imagen-contenedor">
         <img
-            src="ruta/a/tu/imagen.jpg"
-            alt="Foto de AndreCicla"
-            class="acerca-de__imagen"
-        />
+            src="assets/img/fotoandrea.png" alt="Foto de AndreCicla" class="acerca-de__imagen"/>
     </div>
 </section>
 
