boton de carrusel

--- a/Andrea/index.html
+++ b/Andrea/index.html
@@ -26,14 +26,26 @@
 <section class="carruselprincipal">
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="1000">
-      <img src="assets/img/fotocarrusel.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" data-bs-interval="1000">
-      <img src="assets/img/fotocarrusel2.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" data-bs-interval="1000">
-      <img src="assets/img/fotocarrusel3.png" class="d-block w-100" alt="...">
+ <div class="carousel-item active" data-bs-interval="1000">
+  <img src="assets/img/fotocarrusel.png" class="d-block w-100" alt="">
+  <div class="carousel-caption custom-caption btn1-position">
+    <button class="btn-carrusel">Comprar ahora</button>
+  </div>
+</div>
+
+<div class="carousel-item" data-bs-interval="1000">
+  <img src="assets/img/fotocarrusel2.png" class="d-block w-100" alt="...">
+  <div class="carousel-caption custom-caption btn2-position">
+    <button class="btn-carrusel">Comprar ahora</button>
+  </div>
+</div>
+
+<div class="carousel-item" data-bs-interval="1000">
+  <img src="assets/img/fotocarrusel3.png" class="d-block w-100" alt="...">
+  <div class="carousel-caption custom-caption btn3-position">
+    <button class="btn-carrusel">Comprar ahora</button>
+  </div>
+</div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
