--- a/Andrea/index.html
+++ b/Andrea/index.html
@@ -85,7 +85,6 @@
 
 <section class="banner">
   <h2 class="h2banner">Transformo materiales en arte con propósito.</h2>
-  <p>Cada producto esta hecho completamente a mano, cuidando cada detalle en su proceso. Utilizando materiales reciclados y reutilizados, dando nueva vida lo que otros dejan atras, mis creaciones son hechos con amor y respeto al medioambiente.</p>
 </section>
 
 <section class="bannermorado">
@@ -93,6 +92,10 @@
 <img src="assets/img/fotobannermorado.png" alt="">
 <img src="assets/img/fotobannermorado2.png" class="imgbannermorado2" alt="">
   </div>
+</section>
+<section class="amano">
+  <h2>Artesania 100% hecha a mano</h2>
+  <p>Cada producto esta hecho completamente a mano, cuidando cada detalle en su proceso. Utilizando materiales reciclados y reutilizados, dando nueva vida lo que otros dejan atras, mis creaciones son hechos con amor y respeto al medioambiente.</p>
 </section>
 <!-- CARRUSEL PRODUCTOS-->
 <div class="container my-5">
@@ -141,6 +144,7 @@
 </div>
 
 </main>
+
 
 <footer class="footer">
   <div class="footer-container">
